docs/reference/v1.1/overview.rst
Overview
########

One of the key elements of LimeSDR Micro M.2 2280 board is NXP (`LA9310X7S11AA`_) base band processor. 
It’s main function is to transfer digital data between LMS7002M RF transceiver and PC through a M.2 edge connector. 
The block diagram for LimeSDR Micro M.2 2280 board is presented in the Figure 3.

.. figure:: /images/LimeSDR-Micro_M.2_v1.1_diagrams_r0_BD.png
  :width: 600

  Figure 3: LimeSDR Micro M.2 2280 v1.1 board block diagram

LimeSDR Micro M.2 2280 v1.1 board picture with highlighted connectors and main components are presented in Figure 4 and Figure 5, respectively. 

.. _target-LimeSDR-Micro_M.2_2280_v1.1_components_top.png:

.. figure:: /images/LimeSDR-Micro_M.2_2280_v1.1_components_top.png
  :width: 600

  Figure 4: LimeSDR Micro M.2 2280 v1.1 board top connectors and main components

.. figure:: /images/LimeSDR-Micro_M.2_2280_v1.1_components_bot.png
  :width: 600

  Figure 5: LimeSDR Micro M.2 2280 v1.1 board bottom connectors and main components

Description of board components is given in the Table 1.

.. table:: Table 1. Board components

  +----------------------------------------------------------------------------------------------------------------------------+
  | **Featured Devices**                                                                                                       |
  +=======================+================+===================================================================================+
  | **Board   Reference** | **Type**       | **Description**                                                                   |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC1                   | RF transceiver | Lime Microsystems LMS7002M                                                        |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC6                   | BB processor   | NXP Semiconductors LA9310X7S11AA                                                  |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | **Miscellaneous devices**                                                                                                  |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC10                  | IC             | Temperature sensor TMP1075NDRLR                                                   |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC14                  | IC             | I2C I/O expander MCP23017-E/ML                                                    |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | **Configuration, Status and Setup Elements**                                                                               |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | J1                    | JTAG   header  | BB   processor programming ARM 10 pin 0.05" pitch header (not populated)          |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | LED1,   LED2          | Green LEDs     | User defined BB processor   indication green LEDs                                 |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X8                    |  FPC connector | BB processor GPIOs/ RF controls                                                   |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | **RF Circuitry**                                                                                                           |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC5                   | IC             | SPDT RF switch                                                                    |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC3, IC4              | IC             | SP4T RF switch                                                                    |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X1, X2, X4            | MHF4 connector | RF connectors                                                                     |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | J2                    | MHF4 connector | RF control signal output (LA_PA_EN)                                               |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X6                    |  FPC connector | LMS7002 base band TX DAC BB   15-pin FPC connector                                |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X7                    |  FPC connector | RX obeservation externa BB   15-pin FPC connector                                 |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X8                    | FPC connector  | RF control connector                                                              |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+ 
  | **Memory Devices**                                                                                                         |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC2                   | IC             | I²C EEPROM Memory 128Kb (16K x   8), connected to LMS7002M RF transceiver I2C bus |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC13                  | IC             | I²C EEPROM Memory 512Kb (64K x   8), connected to BB processor I2C bus            |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | **Communication Ports**                                                                                                    |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X9                    | M.2 connector  | M.2 B+M key Edge connector (1x   PCIe lane)                                       |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | **Clock Circuitry**                                                                                                        |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | XO1                   | VCTCXO         | 30.72 MHz Voltage Controlled   Temperature Compensated Crystal Oscillator         |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC21                  | IC             | Phase detector                                                                    |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC16                  | IC             | Clock buffer                                                                      |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC18                  | IC             | 16 bit DAC for VCTCXO (XO1)   frequency tuning (default)                          |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC11                  | IC             | GNSS Receiver module                                                              |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC20,   IC22          | IC             | Logic level converters                                                            |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC17,   IC19          | IC             | Analogue switches                                                                 |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | J4                    | MHF4 connector | Reference clock input                                                             |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | J6                    | MHF4 connector | Phase detector input                                                              |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+ 
  | J3                    | MHF4 connector | Reference clock output                                                            |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | J5                    | MHF4 connector | 1PPS input / output                                                               |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | X5                    | MHF4 connector | GNSS (active) antenna connector                                                   |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | **Power Supply**                                                                                                           |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC26,   IC30          | IC             | Four-output switching regulator   LP8758A1E0YFFR                                  |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC23, IC27, IC28, IC29| IC             | Linear regulator LD39100PUR                                                       |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+
  | IC31                  | IC             | Linear regulator AP7330                                                           |
  +-----------------------+----------------+-----------------------------------------------------------------------------------+  

A more detailed description is provided in the following sections.



.. _LA9310X7S11AA: https://www.nxp.com/part/LA9310X7S11AA